...
    return Column(
  crossAxisAlignment: CrossAxisAlignment.stretch,
  children: [
    if (widget.horses.isEmpty)
      const Center(
        child: Text(
          "Aucun cheval trouvé",
          style: TextStyle(color: Colors.grey, fontSize: 18),
        ),
      )
    else
      Column(
        children: displayedHorses.map((horse) {
...
